--- a/Splashy/Contexts/Home/Xibs/HomeViewController.xib
+++ b/Splashy/Contexts/Home/Xibs/HomeViewController.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,44 +19,85 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="zrW-Jh-RR2">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                 </imageView>
                 <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VL5-65-9jb">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vJM-I3-gnX">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
-                    <blurEffect style="dark"/>
+                    <blurEffect style="extraLight"/>
                 </visualEffectView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xhG-FP-ur3">
-                    <rect key="frame" x="32" y="585" width="311" height="50"/>
-                    <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="7or-Pb-Nv9">
+                    <rect key="frame" x="8" y="101.5" width="304" height="169"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="50" id="mbV-rh-KSO"/>
+                        <constraint firstAttribute="width" secondItem="7or-Pb-Nv9" secondAttribute="height" multiplier="16:9" constant="4" id="TSy-N7-FZA"/>
                     </constraints>
-                    <state key="normal" title="PLAY">
-                        <color key="titleColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                    </state>
-                    <connections>
-                        <action selector="playButtonAction:" destination="-1" eventType="touchUpInside" id="JBt-mw-KAh"/>
-                    </connections>
-                </button>
+                </imageView>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="kSH-8q-o74">
+                    <rect key="frame" x="77" y="278.5" width="166" height="50"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xhG-FP-ur3">
+                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="xhG-FP-ur3" secondAttribute="height" multiplier="1:1" id="2ot-QK-eJX"/>
+                            </constraints>
+                            <state key="normal" image="btn-play">
+                                <color key="titleColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                            </state>
+                            <connections>
+                                <action selector="playButtonAction:" destination="-1" eventType="touchUpInside" id="JBt-mw-KAh"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="diV-mb-7sE">
+                            <rect key="frame" x="58" y="0.0" width="50" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="diV-mb-7sE" secondAttribute="height" multiplier="1:1" id="yWW-w7-fdz"/>
+                            </constraints>
+                            <state key="normal" image="btn-record">
+                                <color key="titleColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                            </state>
+                            <connections>
+                                <action selector="playButtonAction:" destination="-1" eventType="touchUpInside" id="emc-Ff-GkJ"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uxV-xY-umP">
+                            <rect key="frame" x="116" y="0.0" width="50" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="uxV-xY-umP" secondAttribute="height" multiplier="1:1" id="lub-u5-Kkt"/>
+                            </constraints>
+                            <state key="normal" image="btn-tutorial">
+                                <color key="titleColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                            </state>
+                            <connections>
+                                <action selector="playButtonAction:" destination="-1" eventType="touchUpInside" id="4iK-bv-GP1"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="ESB-jt-B4Q"/>
+                    </constraints>
+                </stackView>
             </subviews>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="zrW-Jh-RR2" secondAttribute="bottom" id="0ZP-aF-K31"/>
-                <constraint firstItem="xhG-FP-ur3" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="32" id="62w-EY-fgM"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="7or-Pb-Nv9" secondAttribute="trailing" constant="8" id="1Ba-ks-LSS"/>
+                <constraint firstItem="kSH-8q-o74" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="1ec-vd-uj7"/>
                 <constraint firstItem="VL5-65-9jb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Hqk-Wg-CoO"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="xhG-FP-ur3" secondAttribute="trailing" constant="32" id="LQO-sK-AgO"/>
+                <constraint firstItem="kSH-8q-o74" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="fnl-2z-Ty3" secondAttribute="leading" priority="750" constant="64" id="O22-u0-Y74"/>
                 <constraint firstItem="VL5-65-9jb" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="OhW-9Y-rnR"/>
+                <constraint firstItem="7or-Pb-Nv9" firstAttribute="centerY" secondItem="fnl-2z-Ty3" secondAttribute="centerY" constant="-64" id="RCd-K9-v2v"/>
                 <constraint firstAttribute="trailing" secondItem="zrW-Jh-RR2" secondAttribute="trailing" id="S6l-Dg-MlT"/>
+                <constraint firstItem="kSH-8q-o74" firstAttribute="top" secondItem="7or-Pb-Nv9" secondAttribute="bottom" constant="8" symbolic="YES" id="T1U-a7-p4H"/>
+                <constraint firstItem="7or-Pb-Nv9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="dm7-Nx-4Km"/>
                 <constraint firstItem="zrW-Jh-RR2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="dxE-fv-RQV"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="xhG-FP-ur3" secondAttribute="bottom" constant="32" id="g05-jh-Vm9"/>
                 <constraint firstAttribute="bottom" secondItem="VL5-65-9jb" secondAttribute="bottom" id="gdd-EP-SbN"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="kSH-8q-o74" secondAttribute="trailing" priority="750" constant="64" id="mrn-fy-8wy"/>
                 <constraint firstItem="VL5-65-9jb" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="rUF-BL-5W9"/>
                 <constraint firstItem="zrW-Jh-RR2" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="yS9-zH-VkQ"/>
             </constraints>
@@ -64,6 +106,10 @@
         </view>
     </objects>
     <resources>
-        <image name="background" width="1024" height="768"/>
+        <image name="background" width="1000" height="750"/>
+        <image name="btn-play" width="598" height="598"/>
+        <image name="btn-record" width="598" height="598"/>
+        <image name="btn-tutorial" width="598" height="598"/>
+        <image name="logo" width="5048" height="2435"/>
     </resources>
 </document>
