--- a/Splashy/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/Splashy/Resources/Base.lproj/LaunchScreen.storyboard
@@ -19,18 +19,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="wgH-gB-XaS">
-                                <rect key="frame" x="8" y="179.5" width="359" height="200"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-splashy" translatesAutoresizingMaskIntoConstraints="NO" id="wgH-gB-XaS">
+                                <rect key="frame" x="16" y="186" width="343" height="167"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="wgH-gB-XaS" secondAttribute="height" multiplier="16:9" constant="4" id="CTc-q0-A6Q"/>
+                                    <constraint firstAttribute="width" secondItem="wgH-gB-XaS" secondAttribute="height" multiplier="76:37" id="CTc-q0-A6Q"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="wgH-gB-XaS" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-64" id="0oP-FU-ipR"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wgH-gB-XaS" secondAttribute="trailing" constant="8" id="Zbh-8d-Rd8"/>
-                            <constraint firstItem="wgH-gB-XaS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="lra-nu-XNL"/>
+                            <constraint firstItem="wgH-gB-XaS" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-64" id="RdK-Z2-AOa"/>
+                            <constraint firstAttribute="trailing" secondItem="wgH-gB-XaS" secondAttribute="trailing" constant="16" id="jen-Dd-ioA"/>
+                            <constraint firstItem="wgH-gB-XaS" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="16" id="voA-m6-cBO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -41,6 +41,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="5048" height="2435"/>
+        <image name="logo-splashy" width="5048" height="2435"/>
     </resources>
 </document>
