Added GameOver logic, fixed issue with NibLoadable's protocol.

--- a/Splashy/Contexts/Game Over/GameOverViewController.xib
+++ b/Splashy/Contexts/Game Over/GameOverViewController.xib
@@ -22,9 +22,8 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OXA-mA-J9L" customClass="GameOverView" customModule="Splashy" customModuleProvider="target">
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OXA-mA-J9L" customClass="GameOverView" customModule="Splashy" customModuleProvider="target">
                     <rect key="frame" x="32" y="113.5" width="256" height="341"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="OXA-mA-J9L" secondAttribute="height" multiplier="3:4" priority="750" id="TGM-Og-FcU"/>
                     </constraints>
