--- a/Splashy/Contexts/Game Over/GameOverView.xib
+++ b/Splashy/Contexts/Game Over/GameOverView.xib
@@ -14,6 +14,9 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GameOverView" customModule="Splashy" customModuleProvider="target">
             <connections>
                 <outlet property="containerView" destination="lxo-iJ-LYq" id="y5G-gg-CXZ"/>
+                <outlet property="recordButton" destination="5ui-rK-irh" id="pmZ-vy-Ui5"/>
+                <outlet property="retryButton" destination="ruT-aq-u89" id="rvH-7u-ld1"/>
+                <outlet property="tutorialButton" destination="Wf3-Cl-J3k" id="e4y-GX-QRx"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -24,6 +27,14 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lxo-iJ-LYq">
                     <rect key="frame" x="16" y="16" width="343" height="295.5"/>
                     <subviews>
+                        <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H7A-2Q-5rn">
+                            <rect key="frame" x="0.0" y="0.0" width="343" height="295.5"/>
+                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="LDE-Z4-DuW">
+                                <rect key="frame" x="0.0" y="0.0" width="343" height="295"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </view>
+                            <blurEffect style="light"/>
+                        </visualEffectView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IyY-F8-jPJ">
                             <rect key="frame" x="16" y="32" width="311" height="155.5"/>
                             <constraints>
@@ -49,49 +60,49 @@
                             </subviews>
                         </stackView>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.75" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="wRv-gD-aQh" secondAttribute="bottom" constant="32" id="0wv-Hc-NeE"/>
+                        <constraint firstAttribute="trailing" secondItem="H7A-2Q-5rn" secondAttribute="trailing" id="4SD-3M-i9i"/>
+                        <constraint firstItem="H7A-2Q-5rn" firstAttribute="top" secondItem="lxo-iJ-LYq" secondAttribute="top" id="8la-6S-VRy"/>
                         <constraint firstItem="wRv-gD-aQh" firstAttribute="top" secondItem="IyY-F8-jPJ" secondAttribute="bottom" constant="16" id="FjD-RS-UUE"/>
+                        <constraint firstAttribute="bottom" secondItem="H7A-2Q-5rn" secondAttribute="bottom" id="Lf2-ki-YVF"/>
                         <constraint firstItem="IyY-F8-jPJ" firstAttribute="leading" secondItem="lxo-iJ-LYq" secondAttribute="leading" constant="16" id="Ofa-U8-ZcU"/>
                         <constraint firstItem="wRv-gD-aQh" firstAttribute="centerX" secondItem="IyY-F8-jPJ" secondAttribute="centerX" id="bLx-HP-bRo"/>
                         <constraint firstAttribute="trailing" secondItem="IyY-F8-jPJ" secondAttribute="trailing" constant="16" id="iKr-7A-QdW"/>
                         <constraint firstItem="IyY-F8-jPJ" firstAttribute="top" secondItem="lxo-iJ-LYq" secondAttribute="top" constant="32" id="mOp-XM-DoD"/>
+                        <constraint firstItem="H7A-2Q-5rn" firstAttribute="leading" secondItem="lxo-iJ-LYq" secondAttribute="leading" id="slP-zP-bVd"/>
                     </constraints>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5IT-H9-hSj">
                     <rect key="frame" x="119" y="291.5" width="136" height="40"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zfc-2O-lqg">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ruT-aq-u89" customClass="StandardButton" customModule="Splashy" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.75" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="width" secondItem="zfc-2O-lqg" secondAttribute="height" multiplier="1:1" id="Ezq-5s-k6C"/>
+                                <constraint firstAttribute="width" secondItem="ruT-aq-u89" secondAttribute="height" multiplier="1:1" id="Fcy-by-UEd"/>
                             </constraints>
-                            <state key="normal" image="btn-retry">
-                                <color key="titleColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                            </state>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yST-Yw-Kh7">
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5ui-rK-irh" customClass="StandardButton" customModule="Splashy" customModuleProvider="target">
                             <rect key="frame" x="48" y="0.0" width="40" height="40"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.75" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="width" secondItem="yST-Yw-Kh7" secondAttribute="height" multiplier="1:1" id="bJ7-Qg-XkE"/>
+                                <constraint firstAttribute="width" secondItem="5ui-rK-irh" secondAttribute="height" multiplier="1:1" id="7bl-m4-du9"/>
                             </constraints>
-                            <state key="normal" image="btn-record">
-                                <color key="titleColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                            </state>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qeo-hp-xlA">
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wf3-Cl-J3k" customClass="StandardButton" customModule="Splashy" customModuleProvider="target">
                             <rect key="frame" x="96" y="0.0" width="40" height="40"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.75" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="width" secondItem="Qeo-hp-xlA" secondAttribute="height" multiplier="1:1" id="ZlF-bu-ngD"/>
+                                <constraint firstAttribute="width" secondItem="Wf3-Cl-J3k" secondAttribute="height" multiplier="1:1" id="G3T-yI-PkD"/>
                             </constraints>
-                            <state key="normal" image="btn-tutorial">
-                                <color key="titleColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                            </state>
-                        </button>
+                        </view>
                     </subviews>
                     <constraints>
+                        <constraint firstItem="Wf3-Cl-J3k" firstAttribute="width" secondItem="Wf3-Cl-J3k" secondAttribute="height" multiplier="1:1" id="YAW-Rq-8Ua"/>
                         <constraint firstAttribute="height" constant="40" id="h3P-YX-9cb"/>
+                        <constraint firstItem="5ui-rK-irh" firstAttribute="width" secondItem="5ui-rK-irh" secondAttribute="height" multiplier="1:1" id="lvh-VT-nYl"/>
                     </constraints>
                 </stackView>
             </subviews>
@@ -109,9 +120,6 @@
         </view>
     </objects>
     <resources>
-        <image name="btn-record" width="598" height="598"/>
-        <image name="btn-retry" width="598" height="598"/>
-        <image name="btn-tutorial" width="598" height="598"/>
         <image name="score-ruby" width="32" height="31"/>
     </resources>
 </document>
