--- a/Splashy/Contexts/Home/HomeViewController.xib
+++ b/Splashy/Contexts/Home/HomeViewController.xib
@@ -14,12 +14,12 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="Splashy" customModuleProvider="target">
             <connections>
                 <outlet property="backgroundImageView" destination="zrW-Jh-RR2" id="Sxl-cD-wvj"/>
-                <outlet property="buttonsStackView" destination="kSH-8q-o74" id="dwB-5y-7eN"/>
+                <outlet property="buttonsStackView" destination="kSH-8q-o74" id="j2H-Oa-CXy"/>
                 <outlet property="logoImageView" destination="7or-Pb-Nv9" id="NeC-dX-GgC"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outletCollection property="actionButtons" destination="xhG-FP-ur3" collectionClass="NSMutableArray" id="KEW-uA-fMt"/>
-                <outletCollection property="actionButtons" destination="diV-mb-7sE" collectionClass="NSMutableArray" id="Z9t-bD-7v6"/>
-                <outletCollection property="actionButtons" destination="uxV-xY-umP" collectionClass="NSMutableArray" id="8tE-j8-zrU"/>
+                <outletCollection property="actionButtons" destination="xhG-FP-ur3" collectionClass="NSMutableArray" id="rQx-jJ-zfU"/>
+                <outletCollection property="actionButtons" destination="diV-mb-7sE" collectionClass="NSMutableArray" id="8Rn-EI-nhO"/>
+                <outletCollection property="actionButtons" destination="uxV-xY-umP" collectionClass="NSMutableArray" id="iGZ-LO-kRx"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -45,10 +45,10 @@
                     </constraints>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="kSH-8q-o74">
-                    <rect key="frame" x="160" y="254" width="0.0" height="40"/>
+                    <rect key="frame" x="140" y="254" width="40" height="40"/>
                     <subviews>
-                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xhG-FP-ur3">
-                            <rect key="frame" x="-160" y="-254" width="0.0" height="0.0"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xhG-FP-ur3" customClass="StandardButton" customModule="Splashy" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="xhG-FP-ur3" secondAttribute="height" multiplier="1:1" id="2ot-QK-eJX"/>
                             </constraints>
@@ -56,11 +56,11 @@
                                 <color key="titleColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </state>
                             <connections>
-                                <action selector="playButtonAction:" destination="-1" eventType="touchUpInside" id="JBt-mw-KAh"/>
+                                <action selector="playButtonAction:" destination="-1" eventType="touchUpInside" id="Vz0-JS-Jx3"/>
                             </connections>
                         </button>
-                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="diV-mb-7sE">
-                            <rect key="frame" x="-160" y="-254" width="0.0" height="0.0"/>
+                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="diV-mb-7sE" customClass="StandardButton" customModule="Splashy" customModuleProvider="target">
+                            <rect key="frame" x="-140" y="0.0" width="40" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="diV-mb-7sE" secondAttribute="height" multiplier="1:1" id="yWW-w7-fdz"/>
                             </constraints>
@@ -68,8 +68,8 @@
                                 <color key="titleColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </state>
                         </button>
-                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uxV-xY-umP">
-                            <rect key="frame" x="-160" y="-254" width="0.0" height="0.0"/>
+                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uxV-xY-umP" customClass="StandardButton" customModule="Splashy" customModuleProvider="target">
+                            <rect key="frame" x="-140" y="0.0" width="40" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="uxV-xY-umP" secondAttribute="height" multiplier="1:1" id="lub-u5-Kkt"/>
                             </constraints>
